--- a/WordSearch/WordSearch.csproj
+++ b/WordSearch/WordSearch.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Point.cs" />
     <Compile Include="WordSearch.cs">
       <SubType>Form</SubType>
     </Compile>
